@@ -1,3 +1,15 @@
+2015-04-08  Per Arne Vollan  <peavo@outlook.com>
+
+        [Curl] Compile error in CurlCacheEntry::parseResponseHeaders method.
+        https://bugs.webkit.org/show_bug.cgi?id=143531
+
+        Reviewed by Alex Christensen.
+
+        Cache related methods in ResourceResponse have changed return type.
+
+        * platform/network/curl/CurlCacheEntry.cpp:
+        (WebCore::CurlCacheEntry::parseResponseHeaders):
+
 2015-04-08  Anders Carlsson  <andersca@apple.com>
 
         Remove ApplicationCacheGroup::m_isCopy
